@@ -1,17 +1,33 @@
 package it;
+
 import java.util.*;
 
-// da settare nella VM del main
-// --module-path "C:\Users\zacch\Downloads\java\JLib\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml
 public class Main {
-    public static void main(String[]args){
+    public static void main(String[] args) {
         Deck deck = new Deck();
-        System.out.println("");
-        deck.buildDeck();
-        deck.printDeck();
-        System.out.println("");
-        deck.shuffle();
+        Hand dealer;
 
+        Hand player;
+
+        deck.buildDeck();
+        deck.shuffle();
+        //deck.printDeck();
+
+        dealer = new Hand(deck.getDeck());//assicurati che il mazzo sia creato ogni nuova partita nella quale crei una nuova mano.
+
+        //deck.printDeck();
+        dealer.addCard();
+        //punti.CalculatePoints();
+        //System.out.println("\n");
+        //dealer.printHand();
+
+
+        //
+        player = new Hand(deck.getDeck());
+        player.addCard();
+        player.printHand();
+
+        System.out.println(player.getPoints());
 
     }
 }
@@ -79,5 +95,3 @@ public class Main {
 
 
 
-
-errore
